--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - 'maps-topic-qa/topic/region/**'
+      - 'maps-topic-qa/Topics/Region**'
 
 jobs:
   upload-to-s3:
@@ -28,9 +28,9 @@ jobs:
 
       - name: Upload Region Files to S3 with Prefixed Filenames
         run: |
-          for file in $(find maps-topic-qa/topic/region -type f); do
+          for file in $(find maps-topic-qa/Topics/Region -type f); do
             filename=$(basename "$file")
-            aws s3 cp "$file" "s3://your-bucket-name/region/region_${filename}" --acl public-read
+            aws s3 cp "$file" "s3://oxygen.xml/region/region_${filename}" --acl public-read
           done
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
