--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,7 +5,8 @@ on:
     branches:
       - main
     paths:
-      - maps-topic-qa/Topics/Region**'
+      - maps-topic-qa\Topics\Region**'
+      
 
 jobs:
   upload-to-s3:
@@ -28,7 +29,7 @@ jobs:
 
       - name: Upload Region Files to S3 with Prefixed Filenames
         run: |
-          for file in $(find maps-topic-qa/Topics/Region -type f); do
+          for file in $(find maps-topic-qa\Topics\Region -type f); do
             filename=$(basename "$file")
             aws s3 cp "$file" "s3://oxygen.xml/region/region_${filename}"
           done
