--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -34,39 +34,19 @@ jobs:
             aws s3 cp "$file" "s3://oxygen.xml/maps-topic-qa/Topics/Region/$country/${filename}"
           done
 
-      - name: Upload Files to SharePoint
+      - name: Upload Region Files to SharePoint
         run: |
-          CLIENT_ID="${{ secrets.CLIENT_ID }}"
-          CLIENT_SECRET="${{ secrets.CLIENT_SECRET }}"
-          TENANT_ID="${{ secrets.TENANT_ID }}"
-          SITE_NAME="Europa"
-          SITE_ID="431a40db-2230-435a-b2e8-a840482a228c"
-          DRIVE_ID="b!20AaQzAiWkOy6KhASCoijEiko1lHz8xHkoYjM70zcDXpsAgwU3puSolNN1VdApwP"
-
-          # Assuming each file in Region folder should be uploaded
-          # Adjust if necessary
-
           for file in $(find maps-topic-qa/Topics/Region -type f); do
-            FILE_PATH="$file"
+            country=$(echo "$file" | cut -d'/' -f4)
+            filename=$(basename "$file")
+            sharepoint_url="https://triconindia.sharepoint.com/sites/Europa}"
+            client_id="${{ secrets.CLIENT_ID }}"
+            client_secret="${{ secrets.CLIENT_SECRET }}"
+            TenantID = "${{ secrets.TenantID }}"
 
-            # Get OAuth2 Access Token
-            TOKEN_RESPONSE=$(curl -sX POST \
-              -d "client_id=$CLIENT_ID&client_secret=$CLIENT_SECRET&grant_type=client_credentials&scope=https://graph.microsoft.com/.default" \
-              "https://login.microsoftonline.com/$TENANT_ID/oauth2/v2.0/token")
+            # Get OAuth token
+            oauth_token=$(curl -X POST -H "Content-Type: application/x-www-form-urlencoded" -d "grant_type=client_credentials&client_id=$client_id&client_secret=$client_secret&resource=$sharepoint_url" https://accounts.accesscontrol.windows.net/$TenantID/tokens/OAuth/2)
 
-            echo "Token Response: $TOKEN_RESPONSE"
-
-            ACCESS_TOKEN=$(echo $TOKEN_RESPONSE | jq -r .access_token)
-
-            echo "Access Token: $ACCESS_TOKEN"
-
-            # Upload File to SharePoint
-            UPLOAD_RESPONSE=$(curl -sX PUT \
-              -H "Authorization: Bearer $ACCESS_TOKEN" \
-              -H "Content-Type: application/json" \
-              --data "{\"@microsoft.graph.conflictBehavior\": \"replace\"}" \
-              --data-binary "@$FILE_PATH" \
-              "https://graph.microsoft.com/v1.0/sites/$SITE_ID/drives/$DRIVE_ID/items/root:/$FILE_PATH:/content")
-
-            echo "Upload Response: $UPLOAD_RESPONSE"
+            # Upload file to SharePoint using cURL
+            curl -k -X POST -F "file=@$file" -H "accept: application/json;odata=verbose" -H "content-type: application/json;odata=verbose" -H "Authorization: Bearer $(echo $oauth_token | jq -r '.access_token')" "$sharepoint_url/_api/web/getfolderbyserverrelativeurl('/Shared%20Documents')/Files/add(url='$country/$filename',overwrite=true)"
           done
