--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -45,7 +45,7 @@ jobs:
             TenantID = "${{ secrets.TenantID }}"
 
             # Get OAuth token
-            oauth_token=$(curl -X POST -H "Content-Type: application/x-www-form-urlencoded" -d "grant_type=client_credentials&client_id=$client_id&client_secret=$client_secret&resource=$sharepoint_url" https://accounts.accesscontrol.windows.net/$TenantID/tokens/OAuth/2)
+            oauth_token=$(curl -X POST -H "Content-Type: application/x-www-form-urlencoded" -d "grant_type=client_credentials&client_id=$client_id&client_secret=$client_secret&resource=$sharepoint_url" https://accounts.accesscontrol.windows.net/{{6ba04439-8b0e-43ee-ad26-c2ac9ef9e765}}/tokens/OAuth/2)
 
             # Upload file to SharePoint using cURL
             curl -k -X POST -F "file=@$file" -H "accept: application/json;odata=verbose" -H "content-type: application/json;odata=verbose" -H "Authorization: Bearer $(echo $oauth_token | jq -r '.access_token')" "$sharepoint_url/_api/web/getfolderbyserverrelativeurl('/Shared%20Documents')/Files/add(url='$country/$filename',overwrite=true)"
